# neurosim

./: .gitignore  LICENSE  PERFORMANCE_PUBLICATION.md  README.md  package-lock.json  package.json  pm2-manager.sh  tsconfig.json
api/: package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.globalSetup.ts
api/brain-sim-rs/: Cargo.toml  brain_sim_rs.darwin-arm64.node  index.d.ts  index.js  package-lock.json  package.json
api/brain-sim-rs/src/: gpu.rs  lib.rs
api/brain-sim-service/: BASELINE_BENCHMARK.md  BENCHMARK_COMPARISON.md  Cargo.toml
api/brain-sim-service/src/: connectome.rs  feeding.rs  gpu.rs  lib.rs  main.rs  model_constants.rs  sim.rs
api/brain-sim-service/tests/: flies_simulate.rs  integration.rs  spike_lif.rs
api/scripts/: diagnose-socket.mjs  left-propagation-overlap.ts  reset-state.mjs  steering-sanity.ts
api/src/: brain-sim.test.ts  brain-sim.ts  connectome.ts  (+9 more)
data/: README.md  motor-efferents.json  olfactory-afferents.json
docs/: DEPLOY.md  index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
landing/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  wrangler.jsonc
plotly-cabal/: README.md
scripts/: audit-neuron-classification.mjs  benchmark-brain-service.mjs  check-smoothness.mjs  download-dataset.sh  generate-viewer-connectome.mjs  process-connectome.ts  setup-kaggle.sh  smoke-test.mjs
web/: package-lock.json  package.json
world/: brain-plot.html  index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
(+140 files in other folders)
