[package]
name = "brain-sim-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
cuda = ["dep:cudarc"]

[dependencies]
napi = "2"
napi-derive = "2"
rayon = "1.10"
# cudarc 0.12 kept for API stability; cuda-12040 targets CUDA 12.0.40.
# See https://docs.rs/cudarc for newer versions if upgrading.
cudarc = { version = "0.12", optional = true, features = ["cuda-12040"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
